--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,6 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome to #{title}
+doctype html
+html
+head
+    title SnapTag
+p Express
+input(type='button' value='BoxAuth' onclick="window.location.href='/image_upload';")
